[workspace]

members = [ "rust/collection", "rust/course_complex_type", "rust/course_ownership", "rust/course_primitive_type", 
    "rust/date_types", "rust/enums", "rust/error",
    "rust/guessing_game", "rust/lifttimes", "rust/modules",
    "rust/ownership", "rust/restaurant", "rust/structure", "rust/testcase", "rust/traits",
]
